Fix navigation on mobile

--- a/src/apps/AOC2023.WebApp/Layout/Sidenav.razor.css
+++ b/src/apps/AOC2023.WebApp/Layout/Sidenav.razor.css
@@ -44,7 +44,16 @@ nav.closed-on-mobile .nav-item {
     display: none;
 }
 
+nav .not-on-mobile {
+    display: none;
+}
+
 @media (min-width: 992px) {
+
+    nav .not-on-mobile {
+        display: block;
+    }
+
     nav.closed-on-mobile .nav-item {
         display: block;
     }
